--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "13.4.7",
+    "next": "^13.4.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^5.3.10"
   }
 }
